# threads-websockets

./: AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  auth.py  comments.py  main.py  manager.py  pyproject.toml  sockets.py  users.py
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
